Tiny URL looper
